# saint-scholar

./: .env.example  .gitignore  FIXES_SUMMARY.md  LOCAL_TESTING_GUIDE.md  QUICKSTART.md  README.md  eslint.config.cjs  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
docs/: QUICKSTART.md  code_critic.md  droplet-subdomain-deploy.md.bak  frontend-mvp-plan.md  productionize.md
ops/: deploy.sh  rollback.sh
ops/nginx/: saint-scholar.conf
ops/systemd/: saint-scholar.service
scripts/: convert_txt_to_md.py  expand_corpus.py  fetch_pubmed.py  fetch_style_texts.py  smoke_api.py
src/saint_scholar/: config.py  generation.py  ingest.py  populate_knowledge.py  retrieval.py
src/saint_scholar/api/: main.py
src/saint_scholar/api/static/: app.js  index.html  styles.css
tests/: test_api.py  test_generation.py  test_ingest.py  test_retrieval.py  test_static_mobile_overflow.py
tests/ui/: app-core.spec.js  mobile-overflow.spec.js
